argo/argo-workflow-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argo-workflow
spec:
  hosts:
  - "argo.{.INGRESS_NODE_IP}.nip.io"
  gateways:
  - ingressgateway.istio-system.svc.cluster.local
  http:
  - match:
    - uri:
        regex: /.*
    route:
    - destination:
        host: argo-server
        port:
          number: 2746
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: argo-workflow
spec:
  host: argo-server
